--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -17,7 +17,7 @@
         android:gravity="center"
         android:keepScreenOn="true"
         android:text="@string/dummy_content"
-        android:textColor="#ffffff"
+        android:textColor="@color/text_white"
         android:textSize="50sp"
         android:textStyle="bold" />
 
