--- a/app/src/main/res/layout/fragment_jokeitem.xml
+++ b/app/src/main/res/layout/fragment_jokeitem.xml
@@ -4,12 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="4dp"
-    android:clickable="true"
-    android:focusable="true"
-    android:foreground="?android:attr/selectableItemBackground"
+    android:layout_marginBottom="4dp"
     android:padding="4dp"
-    app:cardCornerRadius="3dp"
+    app:cardCornerRadius="0dp"
     app:cardElevation="4dp">
 
     <LinearLayout
@@ -21,27 +18,20 @@
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/text_margin"
-            android:paddingTop="16dp"
-            android:textColor="#a3a3a3"
-            android:textSize="21sp"
-            android:textStyle="bold"
+            android:layout_margin="8dp"
+            android:textColor="@color/text_title"
+            android:textSize="18sp"
             tools:text="【段子】红包" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="4dp"
-            android:background="@drawable/divider_shadow" />
 
         <TextView
             android:id="@+id/content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/text_margin"
+            android:layout_margin="8dp"
+            android:lineSpacingMultiplier="1.5"
             android:padding="4dp"
-            android:textColor="#2b2b2b"
+            android:textColor="@color/text_main"
             android:textSize="15sp"
-            android:lineSpacingMultiplier="1.1"
             tools:text="自从有了红包以后，抢红包已经完全摧毁了我的价值观。以前地上掉一毛钱我连看都不看，现在超过1元我就觉得是一笔巨款，超过5元我就窒息了，超过10元眼眶就湿了。。。这年头每1分钱都来之不易啊。。。" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
