--- a/app/src/main/res/layout/fragment_tuguaitem.xml
+++ b/app/src/main/res/layout/fragment_tuguaitem.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginBottom="4dp"
     android:clickable="true"
     android:focusable="true"
     android:foreground="?android:attr/selectableItemBackground"
@@ -12,6 +14,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+
         android:orientation="vertical">
 
         <com.github.deskid.focusreader.widget.WebImageView
@@ -19,14 +22,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
-            android:scaleType="fitXY" />
+            android:clipToPadding="false"
+            android:elevation="4dp"
+            android:outlineProvider="bounds"
+            android:scaleType="centerCrop" />
 
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/text_margin"
-            android:textAppearance="?attr/textAppearanceListItem" />
+            android:maxLines="1"
+            android:textColor="@color/text_title"
+            android:textSize="18sp"
+            tools:text="ssssssss" />
 
     </LinearLayout>
 </android.support.v7.widget.CardView>
