--- a/app/src/main/res/layout/fragment_zenimage_list.xml
+++ b/app/src/main/res/layout/fragment_zenimage_list.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/swiper"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -9,5 +8,5 @@
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layoutManager="LinearLayoutManager" />
+        android:orientation="vertical" />
 </android.support.v4.widget.SwipeRefreshLayout>
