--- a/app/src/main/res/layout/fragment_zhihu_item.xml
+++ b/app/src/main/res/layout/fragment_zhihu_item.xml
@@ -14,15 +14,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
-        android:orientation="vertical">
+        android:layout_margin="10dp"
+        android:orientation="horizontal">
 
         <com.github.deskid.focusreader.widget.WebImageView
             android:id="@+id/web_imageview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:clipToPadding="false"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:elevation="4dp"
             android:outlineProvider="bounds"
             android:scaleType="centerCrop" />
@@ -32,9 +30,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/text_margin"
-            android:maxLines="1"
+            android:lineSpacingMultiplier="1.3"
             android:textColor="@color/text_title"
-            android:textSize="14sp"
+            android:textSize="15sp"
             tools:text="ssssssss" />
 
     </LinearLayout>
