--- a/app/src/main/res/layout/fragment_tuguaitem.xml
+++ b/app/src/main/res/layout/fragment_tuguaitem.xml
@@ -22,6 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
+            android:minHeight="300dp"
             android:clipToPadding="false"
             android:elevation="4dp"
             android:outlineProvider="bounds"
