--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="text_margin">16dp</dimen>
     <dimen name="app_bar_height">250dp</dimen>
+    <!--<dimen name="design_bottom_navigation_height" tools:ignore="PrivateResource">50dp</dimen>-->
+    <dimen name="bottom_navigation_height">50dp</dimen>
 </resources>
