--- a/app/src/main/res/layout/fragment_zenimage_detail.xml
+++ b/app/src/main/res/layout/fragment_zenimage_detail.xml
@@ -2,14 +2,21 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
+
+    <com.github.deskid.focusreader.widget.WebImageView
+        android:id="@+id/image"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/description"
+        android:scaleType="centerCrop" />
 
     <TextView
         android:id="@+id/description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:elevation="4dp"
         android:gravity="center_vertical"
         android:lineSpacingMultiplier="1.5"
         android:padding="16dp"
@@ -17,12 +24,4 @@
         tools:background="@color/colorAccent"
         tools:text="ssssssssss" />
 
-
-    <com.github.deskid.focusreader.widget.WebImageView
-        android:id="@+id/image"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/description"
-        android:elevation="4dp"
-        android:scaleType="centerCrop" />
 </RelativeLayout>
