--- a/app/src/main/res/layout/fragment_zenimage_list_item.xml
+++ b/app/src/main/res/layout/fragment_zenimage_list_item.xml
@@ -1,42 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:clickable="true"
     android:focusable="true"
-    android:foreground="?android:attr/selectableItemBackground"
-    app:cardCornerRadius="0dp"
-    app:cardElevation="4dp">
+    android:foreground="?android:attr/selectableItemBackground">
 
-    <FrameLayout
+    <com.github.deskid.focusreader.widget.WebImageView
+        android:id="@+id/web_imageview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="240dp"
+        android:scaleType="centerCrop"
+        tools:layout_height="200dp" />
 
-        <com.github.deskid.focusreader.widget.WebImageView
-            android:id="@+id/web_imageview"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:minHeight="250dp"
-            android:adjustViewBounds="true"
-            android:scaleType="centerCrop"
-            tools:layout_height="200dp" />
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:lines="1"
+        android:paddingBottom="16dp"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
+        android:paddingTop="16dp"
+        android:textColor="@color/text_white"
+        android:textSize="14sp"
+        android:visibility="invisible"
+        tools:text="ssssssss" />
+</FrameLayout>
 
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:background="@color/text_dark_fg_overlay"
-            android:lines="1"
-            android:paddingBottom="16dp"
-            android:paddingLeft="8dp"
-            android:paddingRight="8dp"
-            android:paddingTop="16dp"
-            android:textSize="14sp"
-            android:textColor="@color/text_white"
-            tools:text="ssssssss" />
-    </FrameLayout>
-
-</android.support.v7.widget.CardView>
