--- a/app/src/main/res/layout/fragment_zenimage_list_item.xml
+++ b/app/src/main/res/layout/fragment_zenimage_list_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -10,15 +10,14 @@
     <com.github.deskid.focusreader.widget.WebImageView
         android:id="@+id/web_imageview"
         android:layout_width="match_parent"
-        android:layout_height="240dp"
-        android:scaleType="centerCrop"
-        tools:layout_height="200dp" />
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true" />
 
     <TextView
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
+        android:layout_below="@+id/web_imageview"
         android:lines="1"
         android:paddingBottom="16dp"
         android:paddingLeft="8dp"
@@ -28,5 +27,5 @@
         android:textSize="14sp"
         android:visibility="invisible"
         tools:text="ssssssss" />
-</FrameLayout>
+</RelativeLayout>
 
