--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,9 @@
     <color name="colorAccentLight">#258056</color>
     <color name="colorAccentDark">#1A553F</color>
 
+    <color name="color_background_material_light">#fffafafa</color>
+
+
     <color name="colorGray">#737984</color>
     <color name="text_white">#fff</color>
     <color name="text_sub">#56748B</color>
