--- a/app/src/main/res/drawable/ic_expand_more_black_24dp.xml
+++ b/app/src/main/res/drawable/ic_expand_more_black_24dp.xml
@@ -4,6 +4,6 @@
     android:viewportHeight="24.0"
     android:viewportWidth="24.0">
     <path
-        android:fillColor="#FFFFFF"
-        android:pathData="M10,20v-6h4v6h5v-8h3L12,3 2,12h3v8z" />
+        android:fillColor="#a0caea"
+        android:pathData="M16.59,8.59L12,13.17 7.41,8.59 6,10l6,6 6,-6z" />
 </vector>
