--- a/app/src/main/res/layout/activity_web_view.xml
+++ b/app/src/main/res/layout/activity_web_view.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color_background_material_light"
-    tools:context="com.github.deskid.focusreader.screens.tugua.WebViewActivity">
+    tools:context=".screens.penti.tugua.WebViewActivity">
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
