--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -2,18 +2,23 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+        android:id="@+id/navigation_zhihu"
+        android:icon="@drawable/ic_zhihu"
+        android:title="知乎日报" />
 
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_penti"
+        android:icon="@drawable/ic_tugua"
+        android:title="喷嚏图卦" />
+
+    <item
+        android:id="@+id/navigation_articledaily"
+        android:icon="@drawable/ic_articledaily"
+        android:title="每日一文" />
+
+    <item
+        android:id="@+id/navigation_readhub"
         android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
-
-    <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/title_notifications" />
 
 </menu>
