--- a/app/src/main/res/layout/fragment_tuguaitem.xml
+++ b/app/src/main/res/layout/fragment_tuguaitem.xml
@@ -17,7 +17,7 @@
 
         android:orientation="vertical">
 
-        <com.github.deskid.focusreader.widget.WebImageView
+        <com.github.deskid.focusreader.widget.image.WebImageView
             android:id="@+id/web_imageview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
