--- a/app/src/main/res/layout/fragment_zenimage_list_item.xml
+++ b/app/src/main/res/layout/fragment_zenimage_list_item.xml
@@ -7,7 +7,7 @@
     android:focusable="true"
     android:foreground="?android:attr/selectableItemBackground">
 
-    <com.github.deskid.focusreader.widget.WebImageView
+    <com.github.deskid.focusreader.widget.image.WebImageView
         android:id="@+id/web_imageview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
