--- a/app/src/main/res/layout/fragment_tuguaitem.xml
+++ b/app/src/main/res/layout/fragment_tuguaitem.xml
@@ -4,12 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="4dp"
     android:clickable="true"
     android:focusable="true"
     android:foreground="?android:attr/selectableItemBackground"
     app:cardCornerRadius="0dp"
-    app:cardElevation="4dp">
+    app:cardElevation="0dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,14 +18,11 @@
 
         <com.github.deskid.focusreader.widget.image.WebImageView
             android:id="@+id/web_imageview"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
-            android:minHeight="300dp"
-            android:clipToPadding="false"
-            android:elevation="4dp"
-            android:outlineProvider="bounds"
-            android:scaleType="centerCrop" />
+            android:maxHeight="999dp"
+            android:scaleType="fitCenter" />
 
         <TextView
             android:id="@+id/title"
