--- a/app/src/main/res/layout/fragment_zhihu_list.xml
+++ b/app/src/main/res/layout/fragment_zhihu_list.xml
@@ -16,7 +16,8 @@
         <com.github.deskid.focusreader.widget.ScrollableRecyclerView
             android:id="@+id/list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:background="@color/color_background_material_gray"/>
     </android.support.v4.widget.SwipeRefreshLayout>
 
 
