--- a/app/src/main/res/layout/fragment_readhub_topic_item.xml
+++ b/app/src/main/res/layout/fragment_readhub_topic_item.xml
@@ -4,11 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="4dp"
     android:foreground="?android:attr/selectableItemBackground"
-    android:padding="4dp"
     app:cardCornerRadius="0dp"
-    app:cardElevation="4dp">
+    app:cardElevation="0dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -60,8 +58,8 @@
                 android:background="@drawable/round_btn_bg"
                 android:gravity="center_vertical"
                 android:padding="4dp"
-                tools:text="即时读"
-                android:textColor="@color/colorGray" />
+                android:textColor="@color/colorGray"
+                tools:text="即时读" />
 
             <TextView
                 android:id="@+id/publish_date"
