--- a/app/src/main/res/layout/fragment_zenimage_detail.xml
+++ b/app/src/main/res/layout/fragment_zenimage_detail.xml
@@ -5,29 +5,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RelativeLayout
+    <com.github.deskid.focusreader.widget.image.WebImageView
+        android:id="@+id/image"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="fitCenter" />
+
+    <TextView
+        android:id="@+id/description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true">
+        android:layout_alignParentBottom="true"
+        android:background="@color/colorGray"
+        android:elevation="24dp"
+        android:gravity="center_vertical"
+        android:lineSpacingMultiplier="1.5"
+        android:padding="16dp"
+        android:textSize="14sp"
+        tools:text="ssssssssss" />
 
-        <com.github.deskid.focusreader.widget.image.WebImageView
-            android:id="@+id/image"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true" />
-
-        <TextView
-            android:id="@+id/description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/image"
-            android:elevation="24dp"
-            android:gravity="center_vertical"
-            android:lineSpacingMultiplier="1.5"
-            android:padding="16dp"
-            android:textSize="14sp"
-            tools:background="@color/colorAccent"
-            tools:text="ssssssssss" />
-
-    </RelativeLayout>
 </RelativeLayout>
