--- a/app/src/main/res/layout/fragment_readhub_topic_item.xml
+++ b/app/src/main/res/layout/fragment_readhub_topic_item.xml
@@ -11,17 +11,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-
-            android:layout_marginTop="8dp"
+            android:layout_marginBottom="4dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="4dp"
             android:textColor="@color/text_title"
             android:textSize="18sp"
             tools:text="微软 Q1 云计算业务高速增长，Windows 最赚钱，PC 软件生态日益糟糕" />
@@ -30,8 +29,10 @@
             android:id="@+id/content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginBottom="4dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="4dp"
             android:lineSpacingMultiplier="1.5"
             android:textColor="@color/text_sub"
             android:textSize="14sp"
@@ -42,42 +43,62 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="45dp">
+            android:layout_height="45dp"
+            android:background="@color/text_white"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp">
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1px"
-                android:background="#b9b9b9" />
-
-            <TextView
-                android:id="@+id/instant_read"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
-                android:background="@drawable/round_btn_bg"
-                android:gravity="center_vertical"
-                android:padding="4dp"
-                android:textColor="@color/colorGray"
-                tools:text="即时读" />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/instant_read"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="8dp"
+                    android:textColor="@color/text_title"
+                    android:textSize="12sp"
+                    tools:text="腾讯科技" />
+
+                <TextView
+                    android:id="@+id/publish_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/text_sub"
+                    android:textSize="10sp"
+                    tools:text="1小时前" />
+
+            </LinearLayout>
 
             <TextView
-                android:id="@+id/publish_date"
+                android:id="@+id/add_favorite"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="8dp"
+                android:layout_toLeftOf="@+id/share"
+                android:drawableLeft="@drawable/ic_favorite_border_black_24dp"
+                android:gravity="center_vertical"
+                android:padding="4dp"
+                android:text="收藏"
+                android:textColor="@color/colorGray" />
+
+            <TextView
+                android:id="@+id/share"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
+                android:drawableLeft="@drawable/ic_share_black_24dp"
                 android:gravity="center_vertical"
-                android:textColor="@color/colorGray"
-                tools:text="1小时前" />
-
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:background="@drawable/ic_expand_more_black_24dp"
-                android:visibility="gone" />
-
+                android:padding="4dp"
+                android:text="分享"
+                android:textColor="@color/colorGray" />
         </RelativeLayout>
+
     </LinearLayout>
 </android.support.v7.widget.CardView>
